2011-03-30  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Fixed bad 
	legend show condition

2011-03-30 Javier Lanz <javier.lanz@artica.es>
	* godmode/reporting/reporting_builder.item_editor.php: Removed the option
	to select 'show graph' in general reports

2011-03-30  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Added features to 
	the vertical graphs function like colors, alpha values, legend...

2011-03-30 Javier Lanz <javier.lanz@artica.es>

	* include/functions_reporting.php: Fixed a small problem passing 'width'
	parameter in 'top_n' reports

2011-03-30 Javier Lanz <javier.lanz@artica.es>
	* include/functions_reporting.php: Fixed a small problem when displaying
	only the graph and not the table for the exception report.

2011-03-30 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php, include/graphs/*, include/graphs/fgraph.php:
	added first version of common graph libraries with Integria and Babel.

2011-03-30 Javier Lanz <javier.lanz@artica.es>

	* include/functions_reporting.php: Fixed get_agentmodule_sla_array and
	added functionality to show the table, table+graph or only graph
	* include/pchart_graph.php: Fixed function graph_sla_horizontal
	* include/pandora_graph.php: Changed function graph_sla_horizontal
	prototype
	* include/fgraph.php: Deleted function graph_sla_pie, fixed function
	graph_sla_horizontal and added two more cases for printing graphs
	* godmode/reporting/reporting_builder.php: Changed getting parameter
	of two checkboxes for two comboboxes
	* godmode/reporting/reporting_builder.item_editor.php: Added the options
	for the combo to select display table, table+graph or only graph


2011-03-29 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/stat_win.php, godmode/servers/plugin.php: cleaned source
	code style.

2011-03-29  Raul Mateos <raulofpandora@gmail.com>

	* pandora_console_upgrade: Use PI_VERSION variable.
	